--- a/package.json
+++ b/package.json
@@ -14,15 +14,17 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.0",
     "@nextui-org/date-picker": "^2.1.6",
+    "@nextui-org/input": "^2.2.5",
     "@nextui-org/react": "^2.4.6",
-    "@nextui-org/system": "^2.2.5",
-    "@nextui-org/theme": "^2.2.9",
+    "@nextui-org/system": "^2.2.6",
+    "@nextui-org/theme": "^2.2.11",
     "@reduxjs/toolkit": "^2.2.7",
-    "framer-motion": "^11.5.4",
+    "framer-motion": "^11.9.0",
     "lucide-react": "^0.441.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.2",
     "redux": "^5.0.1"
   },
   "devDependencies": {
